--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,11 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.3",
     "bootstrap": "^4.5.3",
     "next": "^12.0.4",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "express": "^4.17.1",
